Added images via js for each of the pieces as well as creating the class and objects for the pieces.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
 
     <script src="scripts/map.js"></script>
     <script src="scripts/board.js"></script>
-    <script src="scripts/logic.js"></script>
+    <script src="scripts/pieces.js"></script>
 </body>
 </html>
