--- a/index.html
+++ b/index.html
@@ -9,89 +9,87 @@
 <body>
     <div id="outer-box">
         <div id="row-one" class="board-row-even">
-            <div id="a8" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="b8" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="c8" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="d8" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="e8" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="f8" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="g8" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="h8" class="board-square" onclick="whenClicked(this)"></div>
+            <div id="a8" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="b8" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="c8" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="d8" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="e8" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="f8" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="g8" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="h8" class="board-square brown" onclick="whenClicked(this)"></div>
         </div>
         <div id="row-two" class="board-row-odd">
-            <div id="a7" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="b7" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="c7" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="d7" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="e7" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="f7" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="g7" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="h7" class="board-square" onclick="whenClicked(this)"></div>
+            <div id="a7" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="b7" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="c7" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="d7" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="e7" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="f7" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="g7" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="h7" class="board-square white" onclick="whenClicked(this)"></div>
         </div>
         <div id="row-three" class="board-row-even">
-            <div id="a6" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="b6" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="c6" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="d6" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="e6" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="f6" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="g6" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="h6" class="board-square" onclick="whenClicked(this)"></div>
+            <div id="a6" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="b6" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="c6" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="d6" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="e6" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="f6" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="g6" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="h6" class="board-square brown" onclick="whenClicked(this)"></div>
         </div>
         <div id="row-four" class="board-row-odd">
-            <div id="a5" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="b5" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="c5" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="d5" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="e5" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="f5" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="g5" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="h5" class="board-square" onclick="whenClicked(this)"></div>
+            <div id="a5" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="b5" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="c5" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="d5" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="e5" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="f5" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="g5" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="h5" class="board-square white" onclick="whenClicked(this)"></div>
         </div>
         <div id="row-five" class="board-row-even">
-            <div id="a4" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="b4" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="c4" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="d4" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="e4" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="f4" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="g4" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="h4" class="board-square" onclick="whenClicked(this)"></div>
+            <div id="a4" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="b4" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="c4" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="d4" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="e4" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="f4" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="g4" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="h4" class="board-square brown" onclick="whenClicked(this)"></div>
         </div>
         <div id="row-six" class="board-row-odd">
-            <div id="a3" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="b3" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="c3" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="d3" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="e3" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="f3" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="g3" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="h3" class="board-square" onclick="whenClicked(this)"></div>
+            <div id="a3" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="b3" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="c3" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="d3" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="e3" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="f3" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="g3" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="h3" class="board-square white" onclick="whenClicked(this)"></div>
         </div>
         <div id="row-seven" class="board-row-even">
-            <div id="a2" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="b2" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="c2" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="d2" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="e2" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="f2" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="g2" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="h2" class="board-square" onclick="whenClicked(this)"></div>
+            <div id="a2" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="b2" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="c2" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="d2" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="e2" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="f2" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="g2" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="h2" class="board-square brown" onclick="whenClicked(this)"></div>
         </div>
         <div id="row-eight" class="board-row-odd">
-            <div id="a1" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="b1" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="c1" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="d1" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="e1" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="f1" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="g1" class="board-square" onclick="whenClicked(this)"></div>
-            <div id="h1" class="board-square" onclick="whenClicked(this)"></div>
+            <div id="a1" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="b1" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="c1" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="d1" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="e1" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="f1" class="board-square white" onclick="whenClicked(this)"></div>
+            <div id="g1" class="board-square brown" onclick="whenClicked(this)"></div>
+            <div id="h1" class="board-square white" onclick="whenClicked(this)"></div>
         </div>
     </div>
 
-    <script src="scripts/map.js"></script>
-    <script src="scripts/board.js"></script>
     <script src="scripts/pieces.js"></script>
 </body>
 </html>
